--- a/styles/index.css
+++ b/styles/index.css
@@ -4,41 +4,26 @@
 }
 
 :root {
-	--body-background: rgb(233,234,237);
-	--nav-background:#dcdfe6;
-	--section-background: #ffffff; 
-	--footer-background: rgb(42,43,60);
-	
-   --dark-blue: #00619d;
-   
-   --black-text: #111;
-   --blue-text: #1675b6;
-   --gray-text: #7a7a7a;
-   --white-text: #eee;
+	color-scheme: light dark;
+		--body-background: light-dark(rgb(233,234,237), #18191a);
+		--nav-background: light-dark(#dcdfe6, #18191a);
+		--section-background: light-dark(#ffffff, #242526);
+		--footer-background: light-dark(rgb(42,43,60), #18191a);
 
-   --drop-shadow: rgb(197, 197, 197);
-   --hover-text: #2196f3; 
-   --span-ster: #ffd600;
+		--black-text: light-dark(#111, #eee) ;
+		--white-text: light-dark(#eee, #111);
 
-
-	/* color-scheme: light dark;
-		--body-background: light-dark (rgb(233,234,237), #18191a);
-		--nav-background: light-dark (#dcdfe6, #18191a);
-		--section-background: light-dark (#ffffff, #242526);
-		--footer-background: light-dark (rgb(42,43,60), #18191a);
-
-		--black-text: light-dark (#111, #eee) ;
-		--blue-text: light-dark #1675b6;
-		--white-text: light-dark (#eee, #111);
-
-		--drop-shadow: light-dark (rgb(197, 197, 197), #3e4042);
+		--drop-shadow: light-dark(rgb(197, 197, 197), #3e4042);
 
 
 	 --dark-blue: #00619d;
 	 --gray-text: #7a7a7a;
+     --blue-text: #1675b6;
+
 
 	 --hover-text: #2196f3; 
-     --span-ster: #ffd600; */
+     --span-ster: #ffd600;
+
 }
 
 a, abbr{
@@ -237,13 +222,14 @@ main section:nth-of-type(2) > a{
 main section:nth-of-type(3) ul, main section:nth-of-type(4) ul, main section:nth-of-type(5) ul { 
     overflow: auto; 
     white-space: nowrap; 
+    display: flex;
     margin: 1em; 
+    gap: 0.5em;
 } 
 
 main section:nth-of-type(3) ul li, main section:nth-of-type(4) ul li, main section:nth-of-type(5) ul li  { 
-    display: inline-block;
+    display: block;
     padding: 0;
-    padding-left: 0.5em;
 } 
 
 main section:nth-of-type(3) img, main section:nth-of-type(4) img { 
@@ -628,28 +614,4 @@ section:nth-of-type(3) > a, section:nth-of-type(4) > a, section:nth-of-type(5) >
     
     display: flex;
     justify-content: end;
-
-    /* position: absolute;
-    left: calc(80%); */
 }
-
-/*     
-section:nth-of-type(3) > a{
-    top: 80em;
-}   
-
-section:nth-of-type(4) > a{
-    top: 107.5em;
-}  
-
-section:nth-of-type(5) > a{
-    top: 138.3em;
-} 
-
-section:nth-of-type(6) > a{
-    top: 165em;
-}  
-
-section:nth-of-type(7) > a{
-    top: 189em;
-}   */
