--- a/styles/profile.css
+++ b/styles/profile.css
@@ -3,25 +3,12 @@
 }
 
 :root {
-	--body-background: rgb(233,234,237);
-	--nav-background:#dcdfe6;
-	--section-background: #ffffff; 
-	--footer-background: rgb(42,43,60);
-	--a-background: #f8f8f8; 
+
+	--a-background: light-dark(#f8f8f8, ) ; 
 	
-   --dark-blue: #00619d;
-   
-   --black-text: #111;
-   --blue-text: #1675b6;
-   --gray-text: #7a7a7a;
-   --white-text: #eee;
-
-   --drop-shadow: rgb(197, 197, 197);
-   --hover-text: #2196f3; 
-   --span-ster: #ffd600;
 
 
-	/* color-scheme: light dark;
+	color-scheme: light dark;
 		--body-background: light-dark (rgb(233,234,237), #18191a);
 		--nav-background: light-dark (#dcdfe6, #18191a);
 		--section-background: light-dark (#ffffff, #242526);
@@ -38,7 +25,7 @@
 	 --gray-text: #7a7a7a;
 
 	 --hover-text: #2196f3; 
-     --span-ster: #ffd600; */
+     --span-ster: #ffd600;
 }
 
 a, abbr{
