--- a/styles/style.css
+++ b/styles/style.css
@@ -268,7 +268,10 @@ header > form button{
 	  background-color: var(--section-background);
 	  margin: 1em;
 	  padding: 1em;
-	  border: 1px solid var(--gray-text)
+	  border: 1px solid var(--gray-text);
+	  /* display: flex;
+	  flex-wrap: wrap;
+	  justify-content: space-between; */
   }
   
   h1{
@@ -335,7 +338,7 @@ header > form button{
 footer img{
 	width: 7em;
 	}
-	
+
   footer section:nth-of-type(1) > p{
 	font-size: 0.8em;
 	font-weight: lighter;
