--- a/styles/index.css
+++ b/styles/index.css
@@ -21,7 +21,8 @@
 	 --dark-blue: #00619d;
      --blue-text: #1675b6;
 	 --gray-text: #7a7a7a;
-
+	 --wit: #eee;
+     
 	 --hover-text: #2196f3; 
      --span-ster: #ffd600;
 }
