--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@
 	 --dark-blue: #00619d;
      --blue-text: #1675b6;
 	 --gray-text: #7a7a7a;
+	 --wit: #eee;
 
 	 --hover-text: #2196f3; 
      --span-ster: #ffd600;
@@ -43,6 +44,10 @@
 	text-decoration: none;
   }
 
+  svg{
+	fill: var(--black-text);
+  }
+
   button{
 	cursor: pointer;
   }
@@ -51,9 +56,6 @@
   header{
 	  background-color: var(--dark-blue);
 	  padding: .5em;
-	  /* position: sticky;
-	  z-index: 2; */
-
   
   /*BURGER MENU + CODE VAN DE LES*/
 	  display: flex;
@@ -82,7 +84,7 @@
 
 	text-transform: uppercase;
 	font-size: 1.5em;
-	color: var(--white-text);
+	color: var(--wit);
 
   } 
   
