--- a/styles/profile.css
+++ b/styles/profile.css
@@ -42,14 +42,28 @@ a, abbr{
   }
   
 /* Section 1 */
+main section:nth-of-type(1){
+	display: grid;
+	grid-template-columns: 0.1fr 0.9fr; 
+    grid-template-rows: auto 1fr; /* Eén rij voor de eerste twee items en één rij voor het derde item */
+	gap: 0.5em;
+
+}
+
 main section:nth-of-type(1) img{
 	border-radius: 10em;
 	width: 4em; 
+
+	grid-column: 1;
+	grid-row: 1;
 }
 
 main section:nth-of-type(1) ul{
 	display: flex;
 	flex-wrap: wrap;
+
+
+	grid-column: 1/3;
 }
 
 main section:nth-of-type(1) ul li{
