--- a/styles/index.css
+++ b/styles/index.css
@@ -15,7 +15,7 @@
 
 		--white-text: light-dark(#eee, #111);
 
-		--drop-shadow: light-dark(rgb(197, 197, 197), #3e4042);
+		--drop-shadow: light-dark(#3e4042, rgb(197, 197, 197));
 
 
 	 --dark-blue: #00619d;
@@ -284,7 +284,7 @@ main section:nth-of-type(4) ul li > ul{
 
     padding: 0.3em;
     border-radius: 4px;
-    width: 8em;
+    width: 7em;
     height: 3em;
 
     grid-area: 1 / 1 / 2 / 2;
@@ -300,15 +300,40 @@ main section:nth-of-type(4) ul li > ul{
     align-items: center;
 }
 
+main section:nth-of-type(4) ul li > ul li {
+    display: flex;
+    align-items: center;
+}
+
 main section:nth-of-type(4) ul li > ul li:nth-of-type(1) {
     margin-right: 0.5em ;
+    margin-left: 0.5em;
 }
+
 
 main section:nth-of-type(4) ul li > ul li p{
     margin: 0;
     padding: 0;
     font-weight: bold;
 }
+
+main section:nth-of-type(4) ul li > ul::after{
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin-left: -.5em;
+    bottom: -9px;
+    left: 50%;
+    box-sizing: border-box;
+    border-color: transparent transparent var(--section-background) var(--section-background);
+    border-style: solid;
+    border-width: 5px;
+    transform-origin: 0 0;
+    transform: rotate(-45deg);
+    box-shadow: -3px 3px 3px 0 var(--drop-shadow);
+}
+
 
 
 /* span ster 1 */
