--- a/styles/profile.css
+++ b/styles/profile.css
@@ -10,18 +10,19 @@
 		--footer-background: light-dark(rgb(42,43,60), #18191a);
 		--light-gray: light-dark(#f8f8f8, #1b1c1d) ; 
 
-		--black-text: light-dark(#111, #eee) ;
-
+		--black-text: light-dark(#111, #eee);
 		--white-text: light-dark(#eee, #111);
+        --gray-text: light-dark(#7a7a7a, #eee);
 
-		--drop-shadow: light-dark(rgb(197, 197, 197), #3e4042);
+		--drop-shadow: light-dark(#3e4042, rgb(197, 197, 197));
 
 
 	 --dark-blue: #00619d;
      --blue-text: #1675b6;
-	 --gray-text: #7a7a7a;
+	 --gray: #7a7a7a;
 	 --wit: #eee;
-
+     --zwart: #111;
+     
 	 --hover-text: #2196f3; 
      --span-ster: #ffd600;
 }
@@ -127,6 +128,16 @@ main section:nth-of-type(2) ul:nth-of-type(1) li p:nth-of-type(3){
 	color: var(--gray-text);
 
 }
+
+/* td, th {
+	border: 1px solid #dddddd;
+	text-align: left;
+	padding: 8px;
+  }
+  
+  tr:nth-child(even) {
+	background-color: #dddddd;
+  } */
 /* EIND section 2 */
 
 /* Section 3 */
