--- a/styles/index.css
+++ b/styles/index.css
@@ -541,8 +541,6 @@ main section:nth-of-type(6) h3:nth-of-type(2){
     grid-column: 1;
 }
 
-
-
 main section:nth-of-type(6) h3{
     color: var(--blue-text);
 }
@@ -589,6 +587,11 @@ main section:nth-of-type(6) ul:nth-of-type(4){
 main section:nth-of-type(6) ul:nth-of-type(2) li,
 main section:nth-of-type(6) ul:nth-of-type(4) li {
     display: flex;
+}
+
+main section:nth-of-type(6) ul:nth-of-type(2) li p,
+main section:nth-of-type(6) ul:nth-of-type(4) li p{
+    color: var(--gray-text)
 }
 
 main section:nth-of-type(6) ul:nth-of-type(2) li img,
