--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 	margin: 0;
 	padding: 0;  
   
-	font-family:  Helvetica, Arial, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
   
   }
 
@@ -383,15 +383,11 @@ footer img{
 	align-items: center;
   }
 
-  footer section:nth-of-type(1) ul:nth-of-type(2) li a p:nth-of-type(1){
+   footer section:nth-of-type(1) ul:nth-of-type(2) li a p{
 	font-size: 10px;
-
   }
 
-  footer section:nth-of-type(1) ul:nth-of-type(2) li a p:nth-of-type(2){
-	font-size: 16px;
-	font-weight: bold;
-  }
+
   
   footer section:nth-of-type(1) ul:nth-of-type(2) img{
 	width: 1.5em;
