--- a/styles/profile.css
+++ b/styles/profile.css
@@ -129,15 +129,16 @@ main section:nth-of-type(2) ul:nth-of-type(1) li p:nth-of-type(3){
 
 }
 
-/* td, th {
+td, th {
 	border: 1px solid #dddddd;
 	text-align: left;
-	padding: 8px;
+	padding: 0.5em;
+	color: var(--black-text);
   }
   
   tr:nth-child(even) {
 	background-color: #dddddd;
-  } */
+  }
 /* EIND section 2 */
 
 /* Section 3 */
