--- a/styles/style.css
+++ b/styles/style.css
@@ -156,9 +156,9 @@
 	font-variation-settings: 'wght' 900;
   }
 
-  /* 7de, 8ste, 9de svg */
+  /* 7de, 8ste, 9de, 10de, 11ste svg */
   header > ul li:nth-of-type(7) svg g rect:nth-of-type(2),
-  header > ul li:nth-of-type(10) svg g :nth-of-type(2) {
+  header > ul li:nth-of-type(10) svg g rect:nth-of-type(2) {
 	fill: var(--section-background);
   }
 
@@ -186,6 +186,15 @@
   header > ul li:nth-of-type(8) svg g rect,
   header > ul li:nth-of-type(9) svg g rect {
 	stroke-width: 0px;
+ }
+
+ /* 10de svg */
+ header > ul li:nth-of-type(10) svg g line,
+ header > ul li:nth-of-type(10) svg g rect:nth-of-type(1),
+ header > ul li:nth-of-type(10) svg g rect:nth-of-type(2),
+ header > ul li:nth-of-type(10) svg g rect:nth-of-type(3){
+	stroke-miterlimit: 10;
+	fill: var(--section-background);
  }
 
   /* eind svg */
