--- a/styles/profile.css
+++ b/styles/profile.css
@@ -137,7 +137,7 @@ td, th {
   }
   
   tr:nth-child(even) {
-	background-color: #dddddd;
+	background-color: var(--gray);
   }
 /* EIND section 2 */
 
