--- a/styles/style.css
+++ b/styles/style.css
@@ -116,12 +116,12 @@
 
 	z-index: 200;
 
-	/* transform: translateY(-200em); */
+	transform: translateY(-200em);
   }
 
-  /* header > ul.inBeeld {
+  header > ul.inBeeld {
 	transform: translateY(0);
-  } */
+  }
 
   header > ul li a{
 	font-size: 14px;
@@ -405,7 +405,7 @@ header > form button{
   /****footer****/
   footer{
 	  background-color: var(--footer-background);
-	 color: var(--white-text);
+	 color: var(--wit);
 	  padding: 0.5em;
 
 	  display: flex;
@@ -420,12 +420,9 @@ header > form button{
   }
 
   footer ul li a{
-	 color: var(--white-text);
+	 color: var(--wit);
 	 font-size: 0.8em;
   }
-  
-
-  
 
   footer p{
 	font-size: 0.9em;
@@ -461,7 +458,7 @@ footer img{
   }
 
  footer section:nth-of-type(1) ul:nth-of-type(1) li{
-	border: 1px solid var(--white-text);
+	border: 1px solid var(--wit);
 	border-radius: 50%;
   }
 
@@ -475,7 +472,7 @@ footer img{
 
   /* Tweede ul */
   footer section:nth-of-type(1) ul:nth-of-type(2) li{
-	border: 1px solid var(--white-text);
+	border: 1px solid var(--wit);
 	border-radius: 30px;
 	margin: 0.5em;
   }
@@ -492,8 +489,6 @@ footer img{
 	font-size: 10px;
   }
 
-
-  
   footer section:nth-of-type(1) ul:nth-of-type(2) img{
 	width: 1.5em;
 	margin: 0.5em;
