--- a/styles/index.css
+++ b/styles/index.css
@@ -52,12 +52,13 @@ main section:nth-of-type(1) li:nth-of-type(1) img{
     width: 40em;
     display: flex;
     align-items: center;
+    filter: grayscale(100%);
 }
-
+/* 
 main section:nth-of-type(1) li:nth-of-type(1) img::before{
     content: "";
     color: var(--zwart) ;
-}
+} */
 
 main section:nth-of-type(1) li:nth-of-type(2) svg:nth-of-type(1){
     width: 1.2em;
@@ -79,8 +80,8 @@ main section:nth-of-type(1) li:nth-of-type(2) svg:nth-of-type(2){
 }
 
 main section:nth-of-type(1) h2 {
-    color: var(--dark-blue);
-    /* text-shadow: -1px 0 var(--black-text), 0 1px var(--black-text), 1px 0 var(--black-text), 0 -1px var(--black-text); */
+    color: var(--hover-text);
+    text-shadow: -1px 0 var(--black-text), 0 1px var(--black-text), 1px 0 var(--black-text), 0 -1px var(--black-text);
     padding: 0.5em;
     padding-bottom: 0;
 
