--- a/styles/index.css
+++ b/styles/index.css
@@ -757,6 +757,10 @@ main section:nth-of-type(7) ul li button{
     margin-top: 0.4em;
 }
 
+main section:nth-of-type(7) ul li button:active{ 
+    background-color: var(--light-gray);
+}
+
 main section:nth-of-type(7) ul li button img{ 
     width: 1em;
 	margin-top:2.5px ;
