--- a/styles/profile.css
+++ b/styles/profile.css
@@ -57,7 +57,6 @@ main section:nth-of-type(1) ul{
 	display: flex;
 	flex-wrap: wrap;
 
-
 	grid-column: 1/3;
 }
 
@@ -92,6 +91,23 @@ main section:nth-of-type(1) ul li:nth-of-type(10) button{
  	padding: 0.1em;
 }
 
+/* Spinner-animatie */
+.loading-spinner {
+    width: 30px;
+    height: 30px;
+    border: 2px solid var(--black-text);
+    border-radius: 50%;
+    border-top-color: transparent;
+    animation: spin 0.8s linear infinite;
+    display: inline-block;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 main section:nth-of-type(1) button svg{
 	fill: var(--blue-text);
 	fill-rule: evenodd;
@@ -102,8 +118,6 @@ main section:nth-of-type(1) button svg{
 main section:nth-of-type(1) button svg:active{
 	fill: var(--wit);
 }
-
-
 /* EIND section 1 */
 
 /* Section 2 */
@@ -143,13 +157,17 @@ main section:nth-of-type(2) ul:nth-of-type(1) li p:nth-of-type(3){
 	color: var(--gray-text); 
 }
 
+form{
+	margin: 1em;
+}
+
 table{
 	margin: 1em;
 	margin-bottom: 0;
 }
 
 td, th {
-	border: 1px solid #dddddd;
+	border: 1px solid var(--wit);
 	text-align: left;
 	padding: 0.5em;
 	color: var(--black-text);
