--- a/styles/profile.css
+++ b/styles/profile.css
@@ -31,6 +31,11 @@ a, abbr{
 	text-decoration: none;
   }
 
+  header > form{
+	top: calc(4.7%);
+	left: calc(-2.5%);
+  }
+
   main section:nth-of-type(2) h2,
   main section:nth-of-type(3) h2{
 	font-size: 1em;
@@ -159,6 +164,11 @@ main section:nth-of-type(2) ul:nth-of-type(1) li p:nth-of-type(3){
 
 form{
 	margin: 1em;
+}
+
+main section:nth-of-type(2) img{
+	width: 22em;
+	margin: auto;
 }
 
 table{
