--- a/styles/index.css
+++ b/styles/index.css
@@ -52,12 +52,24 @@ main section:nth-of-type(1) li:nth-of-type(1) img{
     width: 40em;
     display: flex;
     align-items: center;
-    filter: grayscale(100%);
+     /* filter: grayscale(100%);  */
+    /* werkt niet samen met z-index*/
 }
-/* 
-main section:nth-of-type(1) li:nth-of-type(1) img::before{
+
+main section:nth-of-type(1) ul li:nth-of-type(1)::before{
     content: "";
-    color: var(--zwart) ;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(transparent, black) ;
+    z-index: 0;
+}
+
+/* main section:nth-of-type(1) ul li:nth-of-type(2){
+    z-index: 3;
+    position: relative;
 } */
 
 main section:nth-of-type(1) li:nth-of-type(2) svg:nth-of-type(1){
